fixes banner alignments

--- a/RushMeAdmin/app/resources/css/style.css
+++ b/RushMeAdmin/app/resources/css/style.css
@@ -16,7 +16,7 @@ nav {
 }
 a {
   color: #ffffff;
-  vertical-align:baseline;
+  
 }
 
 body{
